# CameraCalibration

./: .gitignore  README.md  aruco.py  aruco_generation.py  calibrate.py  calibrate_live_camera.py  camera.py  main.py  plotting.py  pnp.py  pyproject.toml  reference_frame.md  script.py  setup.py  setup.sh  test.py  undistort.py
.github/workflows/: main.yml
aruco/: test.html
calibration/: calibration.npz  integrated_full.npz  logitec_4_f30.npz  logitec_4_full_f30.npz  robot_640-480_500.npz
camera_sync/: DepthCamera_2025-03-10-15-56-13.json  __init__.py  aruco.py  calib.npz  calibrate_live_camera.py  calibrate_robot_cam.py  camera.py  convert_to_blender.py  hand_eye.py  hand_eye_blender.py  plotting.py  position.py  referential.py  test.py  test_2.py  test_referential.py  tools.py  visualize.py
camera_sync.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
camera_sync/blender/: base.blend  base.blend1  test.blend  test.blend1
camera_sync/calibration/: Logitec_A_1280-720_0.npz  Logitec_A_640-480_10.npz  Logitec_B_1280-720_0.npz  Logitec_B_800-600_0.npz  Logitec_robot_1920-1080_0.npz  Logitec_robot_1920-1080_10.npz  blender_1920-1080_0.npz  logitec_2_f30.npz  logitec_2_full_f30.npz
