[project]
name = "camera-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bpy>=4.4.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "open3d>=0.19.0",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "scipy>=1.15.2",
]
